cmake_minimum_required(VERSION 3.30)
project(2025)

set(CMAKE_CXX_STANDARD 20)

add_executable(2025 main.cpp
        0329_29.c
        0329_29.c
        0329_29.c
        0329_30.cpp
        0329_31.cpp
        0329_32.cpp
        0329_33.cpp
        032934.cpp
        0331_1.cpp
        0401_1.cpp
        0401_2.cpp
        0401_3.cpp
        0402_1.cpp
        0402_2.cpp
        0402_3.cpp
        0403_1.cpp
        0403_2.cpp
        0403_3.cpp
        0403_4.cpp
        0403_5.cpp
        0403_6.cpp
        0403_7.cpp
        0403_10.cpp
        0404_1.cpp)
